--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,259 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	/* font-size: 100%; */
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+html {
+  font-size: 16px;
+  scroll-behavior: smooth;
 }
 
-* {
+body {
+  font-family: 'Poppins', 'Arial','DM Sans', sans-serif;
+  color: #1D252D;
   box-sizing: border-box;
-  padding: 0;
+}
+
+input {
+  font-family: 'Poppins', 'Arial','DM Sans', sans-serif;
+}
+
+
+ol, ul {
   margin: 0;
+  padding: 0;
+  list-style-position: inside;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+ul li{
+  text-indent: -1em;
+  padding-left: 1.5em;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+blockquote, q {
+	quotes: none;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  color: #FFF;
 }
 
-@media (prefers-color-scheme: dark) {
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+
+
+button{
+  outline: 0;
+  border: none;
+}
+
+button:hover{
+  cursor: pointer;
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-Thin.ttf') format('truetype'); 
+  font-style: normal;
+  font-weight: 100;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-ThinItalic.ttf') format('truetype'); 
+  font-style: italic;
+  font-weight: 100;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-ExtraLight.ttf') format('truetype'); 
+  font-style: normal;
+  font-weight: 200;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-ExtraLightItalic.ttf') format('truetype'); 
+  font-style: italic;
+  font-weight: 200;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-Light.ttf') format('truetype'); 
+  font-style: normal;
+  font-weight: 300;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-LightItalic.ttf') format('truetype'); 
+  font-style: italic;
+  font-weight: 300;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-Regular.ttf') format('truetype'); 
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-Medium.ttf') format('truetype'); 
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-MediumItalic.ttf') format('truetype'); 
+  font-style: italic;
+  font-weight: 500;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-SemiBold.ttf') format('truetype'); 
+  font-style: normal;
+  font-weight: 600;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-SemiBoldItalic.ttf') format('truetype'); 
+  font-style: italic;
+  font-weight: 600;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-Bold.ttf') format('truetype'); 
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-BoldItalic.ttf') format('truetype'); 
+  font-style: italic;
+  font-weight: 700;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-ExtraBold.ttf') format('truetype'); 
+  font-style: normal;
+  font-weight: 800;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Poppins";
+  src: url('/fonts/poppins/Poppins-ExtraBoldItalic.ttf') format('truetype'); 
+  font-style: italic;
+  font-weight: 800;
+  font-display: swap;
+}
+
+
+
+
+/********************/
+
+:root {
+  --global-primary-color-one:#6F4E37;
+  --global-primary-color-two:#A67B5B;
+  --global-primary-color-three:#ECB176;
+  --global-primary-color-four : #FED8B1;
+  --global-primary-color-five : #F6F8FB ;
+
+  --global-breakpoint-mobile-large:425px;
+  --global-breakpoint-tablet:768px;
+  --global-breakpoint-laptop:1024px;
+  --global-breakpoint-laptop-large:1440px;
+  --global-breakpoint-desktop:2560px;
+  --global-scale-factor-desktop: calc(1680 / 100);
+  --global-scale-factor-mobile: calc(360 / 100);
+}
+
+
+.redColorText{
+  color: #FF2231;
+}
+
+.lockScroll {
+  overflow: hidden;
+}
+
+.themeBgColor{
+  background: rgb(249,255,254);
+  background: linear-gradient(135deg, rgba(249,255,254,1) 0%, rgba(205,255,250,1) 100%);
+}
+
+.section-padding{
+  padding: 0 1.3rem 0 1rem;
+}
+@media screen and (min-width:768px) {
+  
+}
+
+@media screen and (min-width: 1024px) {
   html {
-    color-scheme: dark;
+    font-size: 20px;
+  }
+  .section-padding{
+    padding: 0 5rem;
+  }
+}
+
+@media screen and (min-width: 1680px) {
+  html {
+    font-size: 24px;
   }
 }
